# TODO

./: .gitignore  name_list.toml  pyproject.toml  test_students.json
src/lutils/cli/: __main__.py
src/vibnet/: best_model.pth  normalization_params.npy  pyproject.toml  training_history.npy  vibration_model.pth
src/vibnet/src/vibnet/: data_generator.py  demo.py  main.py  model.py  predictor.py  trainer.py
src/yolo/: __main__.py
